added h2 and liquibase support, added basic repo

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,2 +1,15 @@
 server:
   port: 8090
+
+liquibase:
+  change-log: "classpath:/liquibase/changelog.xml"
+
+spring:
+  datasource:
+    continueOnError: false
+    driverClassName: org.h2.Driver
+    initialize: true
+    platform: h2
+    url: jdbc:h2:mem:treedb
+    password: treedb
+    username: treedb
