introduced basic usage of handlebars templates

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -14,3 +14,6 @@ spring:
     url: jdbc:h2:mem:treedb;DB_CLOSE_ON_EXIT=FALSE
     password: treedb
     username: treedb
+
+handlebars:
+  prefix: "/templates"
